# gcrypt-guile

./: .gitignore  Makefile.am  README  README.md  TODO  acinclude.m4  autogen.sh  configure.ac  env.in  guile.am
gcrypt/: hash.scm  internal.scm  random.scm
modules/: Makefile.am  hash.scm  prime.scm  random.scm
src/: Makefile.am  hash-c.scm  hash.c  hash.scm
